<resources>
    <string name="app_name">Weather App</string>
    <string name="connection_error">No connection to the server</string>
    <string name="turn_on_GPS">Please, turn on your GPS</string>
    <string name="menu_home">Menu</string>
    <string name="choose_country">Please, choose your country</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer open</string>
    <string name="parisName">Paris</string>
    <string name="manchesterName">Manchester</string>
    <string name="warsawName">Warsaw</string>
    <string name="berlinName">Berlin</string>
    <string name="stockholmName">Stockholm</string>
    <string name="my_location">My location</string>
</resources>